--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -91,7 +91,7 @@ footer {
 
       &__container {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         background-color: seagreen;
       }
 
