--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -36,6 +36,7 @@ h2 {
   + p::first-letter {
     color: var(--secondary-color);
     font-size: $font-size--3;
+    line-height: $line-height--article-title;
   }
 }
 
@@ -56,6 +57,7 @@ h3 {
   + p::first-letter {
     color: var(--secondary-color);
     font-size: $font-size--3;
+    line-height: $line-height--article-title;
   }
 }
 
@@ -75,6 +77,7 @@ h4 {
   + p::first-letter {
     color: var(--secondary-color);
     font-size: $font-size--3;
+    line-height: $line-height--article-title;
   }
 }
 
@@ -95,6 +98,7 @@ h5 {
   + p::first-letter {
     color: var(--secondary-color);
     font-size: $font-size--3;
+    line-height: $line-height--article-title;
   }
 }
 
@@ -115,6 +119,7 @@ h6 {
   + p::first-letter {
     color: var(--secondary-color);
     font-size: $font-size--3;
+    line-height: $line-height--article-title;
   }
 }
 
