--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -121,7 +121,7 @@
     right: 0;
     left: 0;
     padding: $whitespace--s;
-    background-color: thistle;
+    // background-color: thistle;
     font-variant: small-caps;
     font-weight: $font-weight--subject;
   }
@@ -130,7 +130,7 @@
     @include transition-general;
 
     height: 100%;
-    background-color: blueviolet;
+    // background-color: blueviolet;
   }
 
   &__caption {
@@ -148,43 +148,41 @@
   }
 
   &__caption-title {
-    background-color: darkorchid;
+    padding: 0;
+    margin-bottom: $whitespace--s;
     color: var(--background-color);
     font-variant: small-caps;
-    font-weight: $font-weight--article-title;
+    font-weight: $font-weight--subject;
     text-transform: lowercase;
   }
 
   &__caption-text {
-    background-color: magenta;
+    // background-color: magenta;
     color: var(--background-color);
   }
 
   &__caption-btn {
+    @include transition-general;
+
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 30px;
+    padding: $whitespace--xs $whitespace--s;
     border: 0;
-    margin: 10px 0 0;
+    margin-top: $whitespace--s;
     background-color: var(--tertiary-color);
-    border-radius: 5px;
+    border-radius: $border-radius--xs;
     box-shadow: $box-shadow--slide-in;
     color: var(--primary-color);
+    font-size: $font-size--2;
+    font-variant: small-caps;
+    text-transform: lowercase;
+
+    &:active {
+      box-shadow: none;
+      transform: translateY(4px);
+    }
 
     &:hover {
       color: var(--background-color);
-      @include transition-general($duration: 0.15s);
-    }
-
-    &:active {
-      @include transition-general($duration: 0.15s);
-
-      background-color: var(--secondary-color);
-
-      box-shadow: none;
-      transform: translateY(4px);
     }
   }
 
@@ -193,7 +191,7 @@
     .hot-item {
       // ...
       &__visual {
-        background-color: orchid;
+        // background-color: orchid;
         transform: scale(1.25);
       }
 
@@ -205,6 +203,12 @@
 
       &__title {
         top: -30%;
+      }
+
+      &__caption-title {
+        @include transition-general;
+
+        color: var(--secondary-color);
       }
     }
   }
