--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -135,6 +135,7 @@
 
   &__caption {
     @include transition-general;
+    @include dimensions;
 
     position: absolute;
     z-index: 1;
@@ -157,33 +158,20 @@
   }
 
   &__caption-text {
+    margin: $whitespace--s 0;
     // background-color: magenta;
     color: var(--background-color);
+    overflow: auto;
+    height: 100px;
+  }
+
+  &__caption-text::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
   }
 
   &__caption-btn {
-    @include transition-general;
-
-    position: relative;
-    padding: $whitespace--xs $whitespace--s;
-    border: 0;
-    margin-top: $whitespace--s;
-    background-color: var(--tertiary-color);
-    border-radius: $border-radius--xs;
-    box-shadow: $box-shadow--slide-in;
-    color: var(--primary-color);
-    font-size: $font-size--2;
-    font-variant: small-caps;
-    text-transform: lowercase;
-
-    &:active {
-      box-shadow: none;
-      transform: translateY(4px);
-    }
-
-    &:hover {
-      color: var(--background-color);
-    }
+    // ...
   }
 
   &__container:hover {
