--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -37,6 +37,7 @@
 \* ========================================================================== */
 @import 'components/containers';
 @import 'components/card';
+@import 'components/icon';
 @import 'components/switch';
 @import 'components/mobile-menu';
 @import 'components/button';
