--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -170,6 +170,10 @@
     outline: 1px solid slategrey;
   }
 
+  &__caption-btns {
+    @include inline-flex-container(nowrap, row, space-around, center);
+  }
+
   &__caption-btn {
     // ...
   }
