--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -117,6 +117,12 @@
     margin: 0;
     font-size: $width;
   }
+
+  // #  ButtonFontawesome Icons
+  @else if $type == btn {
+    margin: 0;
+    font-size: $width;
+  }
 }
 
 // -  <<----------<< Flex-Box >>---------->>
